<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/detail_info_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <!--Address-->
        <FrameLayout
            android:id="@+id/detail_info_address_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/detail_info_address"
                style="@style/DetailInfoTextStandardStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="40dp"
                android:text="@string/detail_info_default_address" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/detail_info_image_description"
                    android:src="@drawable/ic_gps" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <!--Schedule-->
        <LinearLayout
            android:id="@+id/detail_info_schedule_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/DetailInfoTextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:text="@string/detail_info_title_schedule" />

            <TextView
                style="@style/DetailInfoTextStandardStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_not_found" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <!--Contacts-->
        <LinearLayout
            android:id="@+id/detail_info_contacts_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/DetailInfoTextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_title_contacts" />

            <!--Phone number-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/detail_info_phone"
                    style="@style/DetailInfoTextStandardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:text="@string/detail_info_not_found" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginEnd="12dp"
                        android:contentDescription="@string/detail_info_image_description"
                        android:src="@drawable/ic_phone" />

                </LinearLayout>
            </FrameLayout>

            <!--Email-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/detail_info_email"
                    style="@style/DetailInfoTextStandardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:text="@string/detail_info_not_found" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/detail_info_image_description"
                    android:src="@drawable/ic_envelope" />
            </FrameLayout>

            <!--Site-->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp">

                <TextView
                    android:id="@+id/detail_info_site"
                    style="@style/DetailInfoTextStandardStyle"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="40dp"
                    android:text="@string/detail_info_not_found" />

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_gravity="end"
                    android:layout_marginEnd="12dp"
                    android:contentDescription="@string/detail_info_image_description"
                    android:src="@drawable/ic_globe" />
            </FrameLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorGray" />

        <!--Social networks-->
        <LinearLayout
            android:id="@+id/detail_info_social_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="12dp">

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_vk" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@color/colorTransparent"
                android:src="@drawable/ic_facebook" />
        </LinearLayout>

        <!--WTF?? Maybe stocks...-->
        <FrameLayout
            android:id="@+id/detail_info_stocks_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:contentDescription="@string/detail_info_image_description"
                android:src="@color/colorGray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/detail_info_stocks_default" />
        </FrameLayout>

        <!--Photos-->
        <LinearLayout
            android:id="@+id/detail_info_photos_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp">

            <TextView
                style="@style/DetailInfoTextTitleStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_info_title_photo" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/detail_image_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
        </LinearLayout>

        <Button
            android:id="@+id/detail_info_error_btn"
            style="@style/NoShadowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:background="@drawable/button_without_shadow"
            android:fontFamily="@font/roboto"
            android:padding="8dp"
            android:paddingStart="46dp"
            android:paddingEnd="46dp"
            android:text="@string/detail_info_btn_error"
            android:textColor="@color/colorWine"
            android:textSize="14sp" />
    </LinearLayout>
</ScrollView>