<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="model"
                type="ru.gb.vokruge.ui.search.SearchViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".ui.search.SearchFragment">

        <androidx.cardview.widget.CardView
                android:id="@+id/search_fragment_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                app:cardBackgroundColor="@color/translucent"
                app:cardCornerRadius="5dp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="6dp">

                <ImageView
                        android:id="@+id/search_back_btn"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="11dp"
                        android:src="@drawable/back" />

                <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/search_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="40dp"
                        android:layout_marginEnd="34dp"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:hint="@string/search_hint"
                        android:inputType="textVisiblePassword" />

                <ImageView
                        android:id="@+id/search_clear_btn"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="end"
                        android:layout_marginEnd="4dp"
                        android:src="@drawable/ic_close"
                        android:visibility="gone" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/search_list_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:elevation="4dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintBottom_toTopOf="@+id/btnClearHistory"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_fragment_card_view">

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:elevation="4dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/item_search">

            </androidx.recyclerview.widget.RecyclerView>

        </androidx.cardview.widget.CardView>

        <Button
                android:id="@+id/btnClearHistory"
                style="@style/NoShadowButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/button_without_shadow"
                android:fontFamily="@font/roboto"
                android:onClick="@{()->model.clearHistoryClick()}"
                android:paddingLeft="46dp"
                android:paddingTop="8dp"
                android:paddingRight="46dp"
                android:paddingBottom="8dp"
                android:text="@string/clear_history_button"
                android:textColor="#FC792045"
                android:textSize="14sp"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        <ImageView
                android:id="@+id/ivEmptyHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dashicons_search"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/tvEmptyHistory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/empty_history_label"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="14sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ivEmptyHistory" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
